2015-02-20 Howard Butler <howard@hobu.co>
	* CMakeLists.txt cmake/Proj4Mac.cmake 
	man/CMakeLists.txt src/bin_cs2cs.cmake 
	src/lib_proj.cmake: Adapt Charles Karney 
	CMake patches for smoother build #258

2015-02-20 Howard Butler <howard@hobu.co>
	* config.guess config.sub: #257 update very old config.guess
	and config.sub

2015-02-17 Howard Butler <howard@hobu.co>
	* src/PJ_aitoff.c: #250 Inverse solution for Winkel Tripel 
	from Drazan Tutic 

2015-02-17 Howard Butler <howard@hobu.co>
	* CMakeLists.txt cmake/policies.cmake src/lib_proj.cmake: #256 
	CMake tweaks to shut off some noisy policies, fix installation 
	of proj_config header, and shut off Framework building by 
	default on OSX

2015-02-17 Howard Butler <howard@hobu.co>
	* src/lib_proj.cmake CMakeLists: Fix #248 healpix compilation typo

2015-02-16 Howard Butler <howard@hobu.co>
	* src/pj_init.c: Fix #237 warning about initialization 
	ordering due to setlocale

2015-02-16 Howard Butler <howard@hobu.co>
	* nad/Makefile.am nad/Makefile.in and others in nad/: Fix #247 to 
	allow out-of-tree autoconf builds

2014-09-17 Even Rouault <even.rouault@spatialys.com>

	* src/pj_datums.c, src/pj_ellps.c: Add clrk80ign ellipsoid and use it
	in carthage datum def (#245)

2014-09-16  Frank Warmerdam  <warmerdam@pobox.com>

	* Generate 4.9.0 RC2. 

	* nad/epsg: updated with Pulkova 1942(58) reverted, and vertical 
	coordinate system names coming through properly.

	* src/pj_gridinfo.c, pj_apply_vgridshift.c, pj_apply_gridshift.c:
	Fix problems with NTv2 files with improper parent structure (#177).

2014-09-13  Frank Warmerdam  <warmerdam@pobox.com>

	* Generate 4.9.0 release.

2014-19-13 Howard Butler <hobu.inc@gmail.com>
	* CMake: Implement CMake build system for proj.4 #243

2014-09-13  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_datums.c: fix spelling of clrk80 in carthage datum def (#245)

2014-19-13 Howard Butler <hobu.inc@gmail.com>
	* pj_gridinfo.c: Don't crash when nad_ctable_init doesn't return